--- a/SnapGame/Base.lproj/Main.storyboard
+++ b/SnapGame/Base.lproj/Main.storyboard
@@ -55,6 +55,12 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="46l-N7-cb4">
+                                <rect key="frame" x="20" y="482" width="374" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -62,6 +68,7 @@
                     <connections>
                         <outlet property="imageView1" destination="GZM-eQ-UuH" id="iQb-9b-hVs"/>
                         <outlet property="imageView2" destination="UPC-E5-j5r" id="Pxf-gp-oep"/>
+                        <outlet property="missLabel" destination="46l-N7-cb4" id="qL1-e2-vXt"/>
                         <outlet property="pairLabel" destination="Xhq-es-sG9" id="OxH-LU-c7R"/>
                         <outlet property="scoreLabel" destination="8H7-Wc-OuJ" id="SMi-L3-cJa"/>
                         <outlet property="snapButtonOutlet" destination="pzi-QE-0Qy" id="Jkn-sV-IyP"/>
